@@ -40,6 +40,7 @@ off with the hotkey 'm'. See 'help mouse' and 'help bind' for more details.
 
 
 [3.8i]
+* NEW option 'set view map'
 * NEW encapsulate PFA, PFB, TTF font file definitions into postscript files:
   option `set terminal postscript ... fontfile`
 * NEW command 'set fontfile'
