@@ -1,4 +1,13 @@
-2002-10-04  Ethan Merritt  <merritt@u.washington.edu>
+2002-10-20  Petr Mikulik  <mikulik@physics.muni.cz>
+
+	* NEWS docs/gnuplot.doc src/command.c src/command.h src/graph3d.c
+	src/graph3d.h src/mouse.c src/plot2d.c src/plot3d.c src/pm3d.c
+	src/pm3d.h src/save.c src/set.c src/show.c src/unset.c: New command
+	'set view map': forces splot into a layout suitable for 2D maps. 
+	New global variable: int splot_map. New routines splot_map_activate()
+	and splot_map_deactivate().
+
+2002-10-20  Ethan Merritt  <merritt@u.washington.edu>
 
         * src/gplt_x11.c: Fix crash if asked to draw rotated empty string.
 
@@ -1341,7 +1350,7 @@
 
 	* docs/titlepag.sty: Changes for the title page of gnuplot.tex: 
 	Show up-to-date gnuplot version (from the file VERSION) and the
-	last modification date (from the tag $Date: 2002/10/18 10:05:57 $).
+	last modification date (from the tag $Date: 2002/10/20 20:28:58 $).
 
 2002-03-07  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>
 
